--- a/EFI/OC/Kexts/USBMap.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/USBMap.kext/Contents/Info.plist
@@ -22,7 +22,7 @@
 	<string>1.0</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>MacBookPro16,2-XHC</key>
+		<key>MacBookAir9,1-XHC</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
 			<string>com.apple.driver.AppleUSBHostMergeProperties</string>
@@ -43,55 +43,158 @@
 				<key>kUSBMuxEnabled</key>
 				<true/>
 				<key>port-count</key>
-				<data>EgAAAA==</data>
+				<data>
+				DgAAAA==
+				</data>
 				<key>ports</key>
 				<dict>
 					<key>HS01</key>
 					<dict>
+						<key>#port</key>
+						<data>
+						AQAAAA==
+						</data>
 						<key>UsbConnector</key>
-						<integer>0</integer>
-						<key>port</key>
-						<data>AgAAAA==</data>
+						<integer>3</integer>
 					</dict>
 					<key>HS02</key>
 					<dict>
+						<key>#port</key>
+						<data>
+						AgAAAA==
+						</data>
 						<key>UsbConnector</key>
-						<integer>10</integer>
-						<key>port</key>
-						<data>BAAAAA==</data>
+						<integer>255</integer>
 					</dict>
 					<key>HS03</key>
 					<dict>
+						<key>#port</key>
+						<data>
+						AwAAAA==
+						</data>
 						<key>UsbConnector</key>
-						<integer>0</integer>
-						<key>port</key>
-						<data>CAAAAA==</data>
+						<integer>3</integer>
 					</dict>
 					<key>HS04</key>
 					<dict>
+						<key>Comment</key>
+						<string>USBC</string>
+						<key>UsbConnector</key>
+						<integer>9</integer>
+						<key>port</key>
+						<data>
+						BAAAAA==
+						</data>
+					</dict>
+					<key>HS05</key>
+					<dict>
+						<key>#port</key>
+						<data>
+						BQAAAA==
+						</data>
+						<key>UsbConnector</key>
+						<integer>3</integer>
+					</dict>
+					<key>HS06</key>
+					<dict>
+						<key>Comment</key>
+						<string>Camera</string>
 						<key>UsbConnector</key>
 						<integer>255</integer>
 						<key>port</key>
-						<data>CgAAAA==</data>
+						<data>
+						BgAAAA==
+						</data>
+					</dict>
+					<key>HS07</key>
+					<dict>
+						<key>#port</key>
+						<data>
+						BwAAAA==
+						</data>
+						<key>UsbConnector</key>
+						<integer>3</integer>
+					</dict>
+					<key>HS08</key>
+					<dict>
+						<key>#port</key>
+						<data>
+						CAAAAA==
+						</data>
+						<key>UsbConnector</key>
+						<integer>3</integer>
+					</dict>
+					<key>HS09</key>
+					<dict>
+						<key>#port</key>
+						<data>
+						CQAAAA==
+						</data>
+						<key>UsbConnector</key>
+						<integer>3</integer>
+					</dict>
+					<key>HS10</key>
+					<dict>
+						<key>Comment</key>
+						<string>Bluetooth</string>
+						<key>UsbConnector</key>
+						<integer>255</integer>
+						<key>port</key>
+						<data>
+						CgAAAA==
+						</data>
+					</dict>
+					<key>HS11</key>
+					<dict>
+						<key>#port</key>
+						<data>
+						CwAAAA==
+						</data>
+						<key>UsbConnector</key>
+						<integer>3</integer>
+					</dict>
+					<key>HS12</key>
+					<dict>
+						<key>#port</key>
+						<data>
+						DAAAAA==
+						</data>
+						<key>UsbConnector</key>
+						<integer>3</integer>
 					</dict>
 					<key>SS01</key>
 					<dict>
+						<key>#port</key>
+						<data>
+						DQAAAA==
+						</data>
 						<key>UsbConnector</key>
 						<integer>3</integer>
-						<key>port</key>
-						<data>DgAAAA==</data>
 					</dict>
 					<key>SS02</key>
 					<dict>
+						<key>Comment</key>
+						<string>USBA</string>
 						<key>UsbConnector</key>
-						<integer>2</integer>
+						<integer>3</integer>
 						<key>port</key>
-						<data>EgAAAA==</data>
+						<data>
+						DgAAAA==
+						</data>
+					</dict>
+					<key>SS03</key>
+					<dict>
+						<key>#port</key>
+						<data>
+						DwAAAA==
+						</data>
+						<key>UsbConnector</key>
+						<integer>3</integer>
 					</dict>
 				</dict>
 			</dict>
 			<key>model</key>
-			<string>MacBookPro16,2</string>
+			<string>MacBookAir9,1</string>
 		</dict>
 	</dict>
 	<key>OSBundleRequired</key>
