--- a/EFI/OC/Kexts/BigSurface.kext/Contents/PlugIns/VoodooSerial.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/BigSurface.kext/Contents/PlugIns/VoodooSerial.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>22A380</string>
+	<string>21G72</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -27,19 +27,19 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>14C18</string>
+	<string>13F100</string>
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>13.1</string>
+	<string>12.3</string>
 	<key>DTSDKBuild</key>
-	<string>22C55</string>
+	<string>21E226</string>
 	<key>DTSDKName</key>
-	<string>macosx13.1</string>
+	<string>macosx12.3</string>
 	<key>DTXcode</key>
-	<string>1420</string>
+	<string>1341</string>
 	<key>DTXcodeBuild</key>
-	<string>14C18</string>
+	<string>13F100</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>VoodooI2CControllerDriver</key>
@@ -94,15 +94,19 @@
 		</dict>
 	</dict>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.14.6</string>
+	<string>10.15</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2021 Xia Shangning. All rights reserved.</string>
 	<key>OSBundleCompatibleVersion</key>
 	<string>1.0.0</string>
 	<key>OSBundleLibraries</key>
 	<dict>
+		<key>com.alexandred.VoodooI2CServices</key>
+		<string>1.0</string>
 		<key>com.apple.iokit.IOACPIFamily</key>
 		<string>1.4</string>
+		<key>com.apple.iokit.IOHIDFamily</key>
+		<string>2.0</string>
 		<key>com.apple.iokit.IOPCIFamily</key>
 		<string>2.9</string>
 		<key>com.apple.kpi.bsd</key>
